jobs/job_60783810/uncert/errors/benchmark_601/solver_2.txt
INFO: Pointer analysis took 0 sec 1 ms
Test.c:102:13: error: array has incomplete element type 'void'
void memory9[MEMORY9_SIZE];
            ^
Test.c:111:14: error: array has incomplete element type 'void'
void memory10[MEMORY10_SIZE];
             ^
Test.c:120:14: error: array has incomplete element type 'void'
void memory11[MEMORY11_SIZE];
             ^
Test.c:129:14: error: array has incomplete element type 'void'
void memory12[MEMORY12_SIZE];
             ^
Test.c:138:14: error: array has incomplete element type 'void'
void memory13[MEMORY13_SIZE];
             ^
Test.c:210:14: error: array has incomplete element type 'void'
void memory21[MEMORY21_SIZE];
             ^
Test.c:219:14: error: array has incomplete element type 'void'
void memory22[MEMORY22_SIZE];
             ^
Test.c:228:14: error: array has incomplete element type 'void'
void memory23[MEMORY23_SIZE];
             ^
Test.c:255:14: error: array has incomplete element type 'void'
void memory26[MEMORY26_SIZE];
             ^
Test.c:273:14: error: array has incomplete element type 'void'
void memory28[MEMORY28_SIZE];
             ^
Test.c:291:14: error: array has incomplete element type 'void'
void memory30[MEMORY30_SIZE];
             ^
Test.c:318:7: error: expected identifier or '('
int (*)(int, int) memory33[MEMORY33_SIZE];
      ^
Test.c:336:6: error: expected identifier or '('
int (int, int) memory35[MEMORY35_SIZE];
     ^
Test.c:336:6: error: expected ')'
Test.c:336:5: note: to match this '('
int (int, int) memory35[MEMORY35_SIZE];
    ^
Test.c:372:14: error: array has incomplete element type 'void'
void memory39[MEMORY39_SIZE];
             ^
Test.c:408:14: error: array has incomplete element type 'void'
void memory43[MEMORY43_SIZE];
             ^
Test.c:489:7: error: expected identifier or '('
int (*)(int, int) memory52[MEMORY52_SIZE];
      ^
Test.c:498:14: error: array has incomplete element type 'void'
void memory53[MEMORY53_SIZE];
             ^
Test.c:543:14: error: array has incomplete element type 'void'
void memory58[MEMORY58_SIZE];
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
Test.o:1:9: warning: unknown pragma ignored [-Wunknown-pragmas]
#pragma merger(0,"Test.i","")
        ^
Test.c:102:13: error: array has incomplete element type 'void'
void memory9[MEMORY9_SIZE];
            ^
Test.c:111:14: error: array has incomplete element type 'void'
void memory10[MEMORY10_SIZE];
             ^
Test.c:120:14: error: array has incomplete element type 'void'
void memory11[MEMORY11_SIZE];
             ^
Test.c:129:14: error: array has incomplete element type 'void'
void memory12[MEMORY12_SIZE];
             ^
Test.c:138:14: error: array has incomplete element type 'void'
void memory13[MEMORY13_SIZE];
             ^
Test.c:210:14: error: array has incomplete element type 'void'
void memory21[MEMORY21_SIZE];
             ^
Test.c:219:14: error: array has incomplete element type 'void'
void memory22[MEMORY22_SIZE];
             ^
Test.c:228:14: error: array has incomplete element type 'void'
void memory23[MEMORY23_SIZE];
             ^
Test.c:255:14: error: array has incomplete element type 'void'
void memory26[MEMORY26_SIZE];
             ^
Test.c:273:14: error: array has incomplete element type 'void'
void memory28[MEMORY28_SIZE];
             ^
Test.c:291:14: error: array has incomplete element type 'void'
void memory30[MEMORY30_SIZE];
             ^
Test.c:318:7: error: expected identifier or '('
int (*)(int, int) memory33[MEMORY33_SIZE];
      ^
Test.c:336:6: error: expected identifier or '('
int (int, int) memory35[MEMORY35_SIZE];
     ^
Test.c:336:6: error: expected ')'
Test.c:336:5: note: to match this '('
int (int, int) memory35[MEMORY35_SIZE];
    ^
Test.c:372:14: error: array has incomplete element type 'void'
void memory39[MEMORY39_SIZE];
             ^
Test.c:408:14: error: array has incomplete element type 'void'
void memory43[MEMORY43_SIZE];
             ^
Test.c:489:7: error: expected identifier or '('
int (*)(int, int) memory52[MEMORY52_SIZE];
      ^
Test.c:498:14: error: array has incomplete element type 'void'
void memory53[MEMORY53_SIZE];
             ^
Test.c:543:14: error: array has incomplete element type 'void'
void memory58[MEMORY58_SIZE];
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 20 errors generated.
